--- a/src/App.css
+++ b/src/App.css
@@ -59,12 +59,25 @@
   font-weight: 700;
   letter-spacing: 0.04em;
   line-height: 28px;
-  font-size: 16px;
+  font-size: 1rem;
   padding: 0.5rem 1.5rem;
-  border-radius: 1px;
+  border-radius: 0 10px 0 10px;
   border: none;
   outline: none;
   cursor: pointer;
+}
+
+.spoon__img {
+  width: 45px;
+}
+
+.headtext__cormorant {
+  font-family: var(--font-base);
+  color: var(--color-golden);
+  font-size: 4rem;
+  line-height: 83.2px;
+  letter-spacing: 0.04em;
+  text-transform: capitalize;
 }
 
 .p__cormorant {
@@ -75,7 +88,7 @@
   text-transform: capitalize;
   font-feature-settings: 'tnum' on, 'lnum' on;
   line-height: 29.9px;
-  font-size: 23px;
+  font-size: 1.5rem;
 }
 
 .p__opensans {
@@ -85,42 +98,6 @@
   letter-spacing: 0.04em;
   text-transform: capitalize;
   line-height: 28px;
-  font-size: 16px;
-}
-
-.headtext__cormorant {
-  font-family: var(--font-base);
-  color: var(--color-golden);
-  font-size: 64px;
-  line-height: 83.2px;
-  letter-spacing: 0.04em;
-  text-transform: capitalize;
-}
-
-.spoon__img {
-  width: 45px;
-}
-
-@media screen and (min-width: 2000px) {
-  .custom__button,
-  .p__cormorant {
-    /* font-size: 37px; */
-    line-height: 67px;
-  }
-
-  .p__opensans {
-    /* font-size: 30px; */
-    line-height: 50px;
-  }
-
-  .headtext__cormorant {
-    /* font-size: 150px; */
-    line-height: 210px;
-  }
-
-  .spoon__img {
-    width: 80px;
-  }
 }
 
 @media screen and (max-width: 1150px) {
