--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -60,17 +60,16 @@
   a {
     margin: 0 1rem;
     text-decoration: none;
-    transition: 0.5s ease;
 
     &:hover {
-      border-bottom: 1px solid var(--color-golden);
+      color: var(--color-golden);
     }
   }
 
   div {
     width: 1px;
     height: 30px;
-    background: var(--color-grey);
+    background: var(--color-golden);
   }
 
   @media screen and (max-width: 650px) {
