--- a/src/containers/About/about.scss
+++ b/src/containers/About/about.scss
@@ -33,7 +33,7 @@
     }
 
     &__knife {
-      margin: 2rem 4rem;
+      margin: 0 2rem;
 
       @media screen and (max-width: 900px) {
         margin: 4rem 0;
