--- a/src/containers/Chef/chef.scss
+++ b/src/containers/Chef/chef.scss
@@ -29,7 +29,7 @@
 
   img {
     width: 250px;
-    margin-top: 2rem;
+    // margin-top: 0.5rem;
 
     @media screen and (max-width: 450px) {
       width: 80%;
